--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@svgr/plugin-svgo": "^6.3.1",
+    "@svgr/webpack": "^6.3.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "framer-motion": "^4.1.17",
+    "framer-motion": "^6.5.1",
     "kill-port": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
