--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "untitled-project",
-  "version": "0.1.0",
+  "name": "towngraphy",
+  "version": "1.0",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
