--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^9.9.1",
     "framer-motion": "^6.5.1",
     "kill-port": "^2.0.1",
+    "nth-check": "^1.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
@@ -27,7 +28,6 @@
     "build": "GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-
   },
   "eslintConfig": {
     "extends": [
